--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,308 @@
 @import "tailwindcss";
 
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --color-primary: #212957;
+  --color-primary2: #325490;
+  --color-secondary: #FE9800;
+  --color-third: #35c99a;
+  --color-white: #ffffff;
+  --color-black: #000000;
+
+  --text-h1: 55px;
+  --text-h2: 36px;
+  --text-h3: 30px;
+  --text-h4: 25px;
+  --text-body: 24px;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+
+
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+h1, h2, h3{
+  font-family: "Tahoma", sans-serif;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+header{
+  display: flex;
+  flex-direction: row;
+  padding: 5px;
+}
+
+.logo-container{
+  margin-right: 100px;
+  flex-shrink: 0;
+}
+
+nav{
+  flex-grow: 1;
+}
+
+ul{
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  font-weight: bold;
+  font-family: "Tahoma", sans-serif;
+  color: var(--color-primary);
+  font-size: var(--text-h4);
+  padding-top: 20px;
+}
+
+.accueil-btn{
+  color: var(--color-secondary);
+}
+
+.devis-btn{
+  background-color: var(--color-primary);
+  color: var(--color-white);
+  padding: 3px 100px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 2px black;
+}
+
+main{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.bedroom-img{
+  width: 100%;
+  height: auto;
+}
+
+.presentation-grid{
+  padding: 160px 100px;
+}
+
+.presentation-title{
+  color: var(--color-secondary);
+  font-size: var(--text-h2);
+  font-weight: bold;
+}
+
+.presentation-text{
+  color: var(--color-primary);
+  font-size: var(--text-body);
+  margin: 50px 0 0 0;
+  font-family: "Calibri-light", sans-serif;
+}
+
+.presentation-text > p:first-child{
+  margin-bottom: 30px;
+}
+
+.prestations{
+  background: linear-gradient(45deg, #22417A, #396ECD);
+  padding: 80px 100px;
+  width: 100%;
+}
+
+.prestations-title{
+  color: var(--color-white);
+  font-size: var(--text-h2);
+  font-weight: bold;
+}
+
+.prestations-text{
+  color: var(--color-white);
+  font-size: var(--text-h4);
+  font-style: italic;
+  font-weight: bold;
+  font-family: "Calibri-light", sans-serif;
+  width: 80%;
+  margin-top: 60px;
+}
+
+.prestations-img-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 100px;
+}
+
+.prestations-img{
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.prestations-img img{
+  max-height: 150px;
+  width: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+  box-shadow: 0px 0px 5px black;
+}
+
+.prestations-img p{
+  color: var(--color-white);
+  font-size: var(--text-body);
+  font-weight: bold;
+  margin-top: 10px;
+  width: 80%;
+  text-align: center;
+}
+
+.contact-container{
+  text-align: left;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+
+}
+
+.contact{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  color: var(--color-white);
+  height: 80%;
+  font-family: "Calibri-light", sans-serif;
+}
+
+.contact p{
+  font-size: var(--text-h2);
+  font-style: italic;
+  font-weight: bold;
+}
+
+.contact a{
+  font-size: var(--text-h4);
+  font-weight: bold;
+  padding: 3px 50px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 3px black;
+  background-color: var(--color-secondary);
+}
+
+.engagement-title{
+  font-weight: bold;
+  font-size: var(--text-h2);
+  color: var(--color-secondary);
+  margin-top: 100px;
+  margin-bottom: 60px;
+}
+
+.vignette{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 50px;
+}
+
+.vignette h3{
+  margin-top: 20px;
+  font-weight: bold;
+  font-size: var(--text-h4);
+}
+
+.vignette p{
+  margin-top: 20px;
+  width: 50%;
+  font-size: var(--text-body);
+  text-align: justify;
+}
+
+footer{
+  width: 100%;
+}
+
+.footer-contact{
+  background: linear-gradient(45deg, #12896F, #20E7BC);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 400px;
+  margin-top: 50px;
+  border: 2px solid var(--color-primary2);
+}
+
+.footer-contact h2{
+  font-size: 100px;
+  color: var(--color-white);
+  font-family: "FreestyleScript", cursive;
+}
+
+.footer-contact a{
+  font-weight: bold;
+  font-size: var(--text-h2);
+  color: var(--color-white);
+  padding: 10px 55px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 3px black;
+  background-color: var(--color-primary);
+}
+
+.footer-info{
+  height: 120px;
+  background-color: var(--color-primary);
+  border: 2px solid var(--color-primary2);
+  border-top: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* __________________________________  FRONTS  _____________________________ */
+
+
+@font-face {
+  font-family: 'Tahoma';
+  src: url('/fronts/tahoma/tahoma.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Tahoma';
+  src: url('/fronts/tahoma/tahoma-bold.ttf') format('truetype');
+  font-weight: 700;
+}
+
+
+@font-face {
+  font-family: 'FreestyleScript';
+  src: url('/fronts/freestyle-script/freestylescript_regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Calibri-light';
+  src: url('/fronts/calibri-light/calibri-light.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Calibri-light';
+  src: url('/fronts/calibri-light/calibri-light-italic.ttf') format('truetype');
+  font-style: italic;
 }
